--- a/Vannilas.html
+++ b/Vannilas.html
@@ -23,9 +23,9 @@
     <div class="div1">
     <h1>Vanillas calculator</h1>
     <p>Price</p>
-    <input id="myNumber1"  type="number">
+    <input id="myNumber1"  type="number" oninput="product()">
     <p>Amount</p>
-    <input id="myNumber2" type="number">
+    <input id="myNumber2" type="number" oninput="product()">
 
     <span id = "result"></span>
     <script>
@@ -39,7 +39,7 @@
         product()
         
     </script>
-    <button onclick="product()">Calculate</button>
+    
 </div>
 </body>
 </html>
