--- a/Vannilas.html
+++ b/Vannilas.html
@@ -32,9 +32,9 @@
         function product(){
             num1=document.getElementById("myNumber1").value
             num2=document.getElementById("myNumber2").value
-            result = parseInt(num1) * parseInt(num2);
+            result = (num1) *(num2);
 
-            document.getElementById("result").innerHTML =  result;
+            document.getElementById("result").innerHTML = "My Result: " result;
         }
         product()
         
